# argparseDecorator

./: .coverage  .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  pylint.yml  python-publish.yml
argparsedecorator/: __init__.py  annotations.py  argparse_decorator.py  argument.py  nonexiting_argumentparser.py  parsernode.py  utils.py
docs/: requirements.txt
docs/source/: argparse_decorator.rst  conf.py  docstring.rst  environment.yaml  examples.rst  index.rst  intro.rst  limitations.rst  module_api.rst  modules.rst  usage.rst  usage_argparsedecorator_class.rst  usage_docstring.rst  usage_executing_command_line.rst  usage_function_signature.rst  version_history.rst
examples/: README.md  demo.py  readme_demo.py  requirements.txt  simple_asyncio_demo.py  simple_cli.py  ssh_cli.py  sysargv.py
test/: __init__.py  test_analyse_signature.py  test_annotations.py  test_argparse_decorator.py  test_argument.py  test_doc_samples.py  test_docstring_parser.py  test_nonexitingargumentparser.py  test_parsernode.py
trashcan/: analyse_docstring.py  analyse_signature.py  annotations_2.py  docstring_parser_old.py
