[metadata]
name = ArgParseDecorator
version = 1.1.0
author = Thomas Holland
author_email = thomas@innot.de
description = A tool to easily build command line interpreters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/innot/argparseDecorator
project_urls =
    Documentation = https://argparsedecorator.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/innot/argparseDecorator/issues
license = MIT
keywords = 'argparse ArgumentParser decorator tool cli commandline'
python_requires = >=3.8
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Software Development
    Topic :: System :: Shells
    Topic :: Utilities

[options]
packages = find:

[options.packages.find]
include=argparsedecorator
exclude=test/*

[options.extras_require]
examples=
    asyncssh
    prompt-toolkit
